tests/NormalTests/paczka1/fuzzy1/65588446.err
Error in line 12: lv4dmEpkgx A356 24,8
Error in line 19: A398 A356 84,1
Error in line 21: RQL6OOfwaL S521 46,3
Error in line 29: A398 S521 771,7
Error in line 33: A398 A398 10,6
